welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: not found: value getIndication
if (getIndication()=='R'){
    ^BDRBuggle:13: error: not found: value getIndication
if (getIndication()=='L'){
    ^BDRBuggle:19: error: not found: value getIndication
if (getIndication()=='I'){
    ^BDRBuggle:27: error: not found: value getIndication
if (getIndication()=='A'){
    ^BDRBuggle:33: error: not found: value getIndication
if (getIndication()=='B'){
    ^BDRBuggle:39: error: not found: value getIndication
if (getIndication()=='C'){
    ^BDRBuggle:46: error: not found: value getIndication
if (getIndication()=='Z'){
    ^BDRBuggle:52: error: not found: value getIndication
if (getIndication()=='Y'){
    ^BDRBuggle:58: error: not found: value getIndication
if (getIndication()=='X'){
    ^