welcome.lessons.welcome.bdr.BDR.scala.code
var x:Int=0   //pour stopper le programme ? un moment
  

  
while (x!=0){
  
if (getIndication()=='R'){
  x=1;
  droite();
  avance();
}  
  
if (getIndication()=='L'){
  x=1;
  gauche();
  avance();
}
  
if (getIndication()=='I'){
  x=1;
  droite();
  droite();
  avance();
}
  
  
if (getIndication()=='A'){
  x=1;
  avance();
  
}
  
if (getIndication()=='B'){
  x=1;
  avance();
  avance();
}
  
if (getIndication()=='C'){
  x=1;
  avance();
  avance();
  avance();
}
  
if (getIndication()=='Z'){
  x=1;
  recule();
  
}
  
if (getIndication()=='Y'){
  x=1;
  recule();
  recule();
}
  
if (getIndication()=='X'){
  x=1;
  recule();
  recule();
  recule();
}
else{
  x=0
}  
  
  
}  
  
  